# pet_cnn_cw

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_recommended_experiments.py
src/pet_cw/: __init__.py  data.py  evaluate.py  gradcam.py  models.py  predict.py  train.py  utils.py  visualize.py
tests/: test_model_ema.py
